fixed text-align and width

--- a/fcc/tribute-page/styles.css
+++ b/fcc/tribute-page/styles.css
@@ -21,7 +21,8 @@
 	flex-direction:column;
 	justify-content: center;
 	align-items: flex-start;
-	width: 50%;
+	text-align: justify;
+	width: 80%;
 	padding: 1%;
 	margin: auto;
 }
